--- a/public/js.html
+++ b/public/js.html
@@ -133,13 +133,32 @@
           }
         })
 
+
+        //game functions
+        //options:
+        //  blood: 1|-3
+        var hp_bar_width = 230;
+        var hp_full_point = 7.0;
+        $.fn.gHP = function(options) {
+          var setting = {blood: 0};
+          var opt = $.extend(setting, options);
+
+          var h = parseInt(this.attr('hp')) + opt.blood;
+          h = h <= 0 ? 0 : h;
+          this.animate({'width': "+" + ((hp_bar_width / hp_full_point) * h)}).attr('hp', h);
+        }
+
       })
     </script>
     <div id="wrapper" style="margin: 50px;">
       <div style="height: 50px;" id="coord">
       </div>
+      <div id="hp_container" style="margin: 10px 0;">
+        <div id="hp_bar" hp="7" style="width: 230px;height: 28px;background: url(hp.png) no-repeat left top;">
+        </div>
+      </div>
       <div id="map" style="margin-bottom: 20px;cursor:move;">
-        <img id="current_map" src="map1.png" alt="map1" />
+        <img id="current_map" src="map3.jpg" alt="map1" />
         <!--<img id="current_map" src="map2.jpg" alt="map1" />-->
       </div>
       <div id="debug">
